erDiagram
    PATIENT {
        UUID id PK
        VARCHAR fullName
    }

    USER {
        UUID id PK
        UserRole role
    }

    VISIT {
        UUID id PK
        UUID patientId FK
        VisitStatus status
    }

    EXAMINATION {
        UUID id PK
        UUID visitId FK
    }

    PRESCRIPTION {
        UUID id PK
        UUID examinationId FK
    }

    DRUG {
        UUID id PK
        VARCHAR name
    }

    APPOINTMENT {
        UUID id PK
        UUID patientId FK
        UUID doctorId FK
        TIMESTAMP scheduledAt
        AppointmentStatus status
        TEXT note
    }

    QUEUE_TICKET {
        UUID id PK
        UUID visitId FK
        INT queueNumber
        QueueStatus status
        TIMESTAMP calledAt
        TIMESTAMP startedAt
        TIMESTAMP completedAt
    }

    VITAL_SIGN {
        UUID id PK
        UUID visitId FK
        DECIMAL height
        DECIMAL weight
        INT pulse
        DECIMAL temperature
        INT systolicBP
        INT diastolicBP
        DECIMAL bmi
    }

    SERVICE_CATALOG {
        UUID id PK
        VARCHAR code
        VARCHAR name
        ServiceType type
        DECIMAL price
        BOOLEAN isActive
    }

    SERVICE_ORDER {
        UUID id PK
        UUID visitId FK
        UUID examinationId FK
        UUID serviceId FK
        ServiceOrderStatus status
        BOOLEAN isRequired
        TIMESTAMP orderedAt
    }

    LAB_ORDER {
        UUID id PK
        UUID serviceOrderId FK
        LabOrderStatus status
        TIMESTAMP sampleCollectedAt
        TEXT resultValue
        TEXT resultNote
        TIMESTAMP verifiedAt
    }

    STOCK_LOT {
        UUID id PK
        UUID drugId FK
        VARCHAR batchNumber
        DATE expiryDate
        INT quantityOnHand
        TIMESTAMP receivedAt
        DECIMAL unitCost
    }

    STOCK_MOVEMENT {
        UUID id PK
        UUID stockLotId FK
        StockMovementType type
        INT quantity
        TIMESTAMP createdAt
        TEXT note
    }

    DISPENSE {
        UUID id PK
        UUID prescriptionId FK
        UUID dispensedById FK
        TIMESTAMP dispensedAt
        DispenseStatus status
    }

    DISPENSE_ITEM {
        UUID id PK
        UUID dispenseId FK
        UUID stockLotId FK
        UUID drugId FK
        INT quantity
    }

    PATIENT ||--o{ APPOINTMENT : books
    USER ||--o{ APPOINTMENT : doctor

    VISIT ||--|| QUEUE_TICKET : has
    VISIT ||--|| VITAL_SIGN : records

    VISIT ||--o{ SERVICE_ORDER : has
    EXAMINATION ||--o{ SERVICE_ORDER : orders
    SERVICE_CATALOG ||--o{ SERVICE_ORDER : selected
    SERVICE_ORDER ||--o| LAB_ORDER : may_create

    DRUG ||--o{ STOCK_LOT : stocked_as
    STOCK_LOT ||--o{ STOCK_MOVEMENT : movements

    PRESCRIPTION ||--o| DISPENSE : dispensed_by
    USER ||--o{ DISPENSE : pharmacist
    DISPENSE ||--o{ DISPENSE_ITEM : contains
    STOCK_LOT ||--o{ DISPENSE_ITEM : allocated_from
    DRUG ||--o{ DISPENSE_ITEM : drug
